--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -4,4 +4,8 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
